Improve the index

--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,17 @@
-A mirrror of nikitastupin/solc's Linux ARM64 builds
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>solc-linux-arm64-mirror</title>
+  </head>
+  <body>
+    <h1>Linux ARM64 builds of solc</h1>
+
+    <p>
+      A mirror of
+      <a href="https://github.com/nikitastupin/solc/">nikitastupin/solc</a>'s
+      Linux ARM64 builds
+    </p>
+
+    <p>To use it, see <a href="/linux">here</a>.</p>
+  </body>
+</html>
